--- a/page/src/app/pages/public/main/main.component.html
+++ b/page/src/app/pages/public/main/main.component.html
@@ -27,7 +27,7 @@
 <div class="container my-5" *ngIf="packages.length != 0">
   <h1 class="text-center my-4 title-packages">Paquetes</h1>
   <div class="row d-flex justify-content-center">
-    <div class="col-12 col-md-6 col-lg-4 mt-3 mt-lg-0" *ngFor="let package of packages">
+    <div class="col-12 col-md-6 col-lg-4 mt-3" *ngFor="let package of packages">
       <div class="card-package">
         <div class="header-card">
           <h3>{{ package.name }}</h3>
