--- a/page/src/app/pages/public/contact/contact.component.html
+++ b/page/src/app/pages/public/contact/contact.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div class="container-lg py-2">
   <h1 class="text-center my-4 title-contact">Contacto</h1>
   <div class="row">
@@ -56,7 +57,7 @@
               siteKey="6LcMMg4dAAAAAAj7ChPazViPJzo5wACX-pYNPY7k"
               class="float-end"
             ></re-captcha>
-            <p-captcha class="float-end" siteKey="6LcMMg4dAAAAAAj7ChPazViPJzo5wACX-pYNPY7k" (onResponse)="showResponse($event)"></p-captcha>
+            <p-captcha class="float-end" siteKey="6LcMMg4dAAAAAAj7ChPazViPJzo5wACX-pYNPY7k" (onResponse)="showSuccess()"></p-captcha>
           </div>
         </div>
       </form>
