--- a/page/src/app/pages/account/settings/forms/deactivate-account/deactivate-account.component.html
+++ b/page/src/app/pages/account/settings/forms/deactivate-account/deactivate-account.component.html
@@ -1,3 +1,22 @@
+<p-toast position="top-center" key="c" (onClose)="onReject()" [baseZIndex]="5000">
+  <ng-template let-message pTemplate="message">
+      <div class="flex flex-column" style="flex: 1">
+          <div class="text-center">
+              <i class="pi pi-exclamation-triangle" style="font-size: 3rem"></i>
+              <h4>{{message.summary}}</h4>
+              <p>{{message.detail}}</p>
+          </div>
+          <div class="grid p-fluid">
+              <div class="col-6">
+                  <button type="button" pButton (click)="onConfirm()" label="Yes" class="p-button-success"></button>
+              </div>
+              <div class="col-6">
+                  <button type="button" pButton (click)="onReject()" label="No" class="p-button-secondary"></button>
+              </div>
+          </div>
+      </div>
+  </ng-template>
+</p-toast>
 <div class="card">
   <div class="card-header border-0 cursor-pointer"
        role="button" data-bs-toggle="collapse" data-bs-target="#kt_account_deactivate"
