--- a/page/src/app/pages/public/gallery/gallery.component.html
+++ b/page/src/app/pages/public/gallery/gallery.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div class="container mb-5">
     <h1 class="text-center my-4 title-packages">Galeria</h1>
     <p-galleria [value]="images" [containerStyle]="{'max-width': '640px', 'margin': '0 auto'}" [numVisible]="5">
