--- a/page/src/app/pages/public/packages/packages.component.html
+++ b/page/src/app/pages/public/packages/packages.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div class="container mb-5">
     <h1 class="text-center my-4 title-packages">Paquetes</h1>
   <div class="row d-flex justify-content-center">
