--- a/page/src/app/pages/public/reservations/reservations.component.html
+++ b/page/src/app/pages/public/reservations/reservations.component.html
@@ -1,7 +1,7 @@
 <p-toast></p-toast>
 <!-- begin::Header-->
 <div class="container-xxl">
-  <div class="col-12">
+  <div class="col-12 py-5">
     <div class="row">
       <div class="card-header d-flex justify-content-between">
         <h3 class="card-title align-items-start flex-column">
